--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "axios-mock-adapter": "^1.18.1",
     "moment": "^2.25.3",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
